# CodeforcesStarterPack

./: .gitignore  CMakeLists.txt  LICENSE  README.md  archiver.ini
template/: main.cpp
tool/: archiver.py  tester.py
